package design.factory;

/**
 * 产品类.
 */
public interface Product {

    // 产品
    void product();
}
